unpackaged/main/default/objects/OpenStax_Account__c/OpenStax_Account__c.object-meta.xml
<CustomObject>
    <description>A custom object to hold information from the users OpenStax Account</description>
    <label>OpenStax Account</label>
    <nameField>
        <label>OpenStax Account Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OpenStax Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>