unpackaged/main/default/objects/OpenStax_Account__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <businessOwnerGroup>System_Administrator</businessOwnerGroup>
    <description>OpenStax Account ID - SHOULD BE UNIQUE UNLESS ON SANDBOX FOR TESTING!</description>
    <inlineHelpText>OpenStax Account ID - SHOULD BE UNIQUE UNLESS ON SANDBOX FOR TESTING!</inlineHelpText>
    <label>Account ID (Internal)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>