unpackaged/main/default/objects/OpenStax_Account__c/fields/Account_ID_Display__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_Display__c</fullName>
    <description>Display the Account ID as a number without commas</description>
    <formula>TEXT(Account_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>OpenStax Account ID</inlineHelpText>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>