unpackaged/main/default/objects/OpenStax_Account__c/fields/Account_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Role__c</fullName>
    <description>Type of account created. Currently, OpenStax Accounts has the option on Student or Instructor accounts.</description>
    <inlineHelpText>Type of account created. Currently, OpenStax Accounts has the option on Student or Instructor accounts.</inlineHelpText>
    <label>Account Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Role</valueSetName>
    </valueSet>
</CustomField>