unpackaged/main/default/objects/OpenStax_Account__c/fields/Account_UUID__c.field-meta.xml
<CustomField>
    <fullName>Account_UUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Account UUID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>