unpackaged/main/default/objects/OpenStax_Account__c/fields/Accounts_Link__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Link__c</fullName>
    <description>Link to this users account admin profile page on OpenStax Account</description>
    <formula>IF(TEXT(Environment__c) == 'dev', 
  HYPERLINK("https://dev.accounts.openstax.org/admin/users/" &amp; TEXT(Account_ID__c) &amp;"/edit/", TEXT(Account_ID__c)), 

IF(TEXT(Environment__c) == 'qa', 
  HYPERLINK("https://qa.accounts.openstax.org/admin/users/" &amp; TEXT(Account_ID__c) &amp;"/edit/", TEXT(Account_ID__c)),

IF(TEXT(Environment__c) == 'staging', 
  HYPERLINK("https://staging.accounts.openstax.org/admin/users/" &amp; TEXT(Account_ID__c) &amp;"/edit/", TEXT(Account_ID__c)),

IF(TEXT(Environment__c) == 'production', 
  HYPERLINK("https://accounts.openstax.org/admin/users/" &amp; TEXT(Account_ID__c) &amp;"/edit/", TEXT(Account_ID__c)), 

NULL))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to this users account admin profile page on OpenStax Account</inlineHelpText>
    <label>Accounts Link</label>
    <type>Text</type>
</CustomField>