unpackaged/main/default/objects/OpenStax_Account__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contact associated with this OpenStax Account</description>
    <inlineHelpText>Contact associated with this OpenStax Account</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>OpenStax Accounts</relationshipLabel>
    <relationshipName>OpenStax_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>