unpackaged/main/default/objects/OpenStax_Account__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>Accounts environment this account was created from, helpful in test and sandbox environments.</description>
    <inlineHelpText>Accounts environment this account was created from, helpful in test and sandbox environments.</inlineHelpText>
    <label>Environment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Accounts_Environment</valueSetName>
    </valueSet>
</CustomField>