unpackaged/main/default/objects/OpenStax_Account__c/fields/Faculty_Status__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Status__c</fullName>
    <description>Faculty Status in OpenStax Accounts</description>
    <inlineHelpText>Faculty Status in OpenStax Accounts</inlineHelpText>
    <label>Faculty Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FV_Status</valueSetName>
    </valueSet>
</CustomField>