unpackaged/main/default/objects/OpenStax_Account__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead associated with this OpenStax Account</description>
    <inlineHelpText>Lead associated with this OpenStax Account</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>OpenStax Accounts</relationshipLabel>
    <relationshipName>OpenStax_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>