unpackaged/main/default/objects/OpenStax_Account__c/fields/Signup_Date__c.field-meta.xml
<CustomField>
    <fullName>Signup_Date__c</fullName>
    <description>Date and time user signed up for an account with OpenStax</description>
    <inlineHelpText>Date and time user signed up for an account with OpenStax</inlineHelpText>
    <label>Signup Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>