unpackaged/main/default/objects/OpenStax_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Accounts_Link__c</columns>
    <columns>Account_UUID__c</columns>
    <columns>Account_Role__c</columns>
    <columns>Signup_Date__c</columns>
    <columns>Contact__c</columns>
    <columns>Lead__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>