unpackaged/main/default/objects/OpenStax_Account__c/listViews/Instructor_Accounts.listView-meta.xml
<ListView>
    <fullName>Instructor_Accounts</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Accounts_Link__c</columns>
    <columns>Account_UUID__c</columns>
    <columns>Lead__c</columns>
    <columns>Contact__c</columns>
    <columns>Faculty_Status__c</columns>
    <columns>Signup_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Account_Role__c</field>
        <operation>equals</operation>
        <value>Instructor</value>
    </filters>
    <label>Instructor Accounts</label>
</ListView>