unpackaged/main/default/objects/OpenStax_Account__c/listViews/Pending_Faculty.listView-meta.xml
<ListView>
    <fullName>Pending_Faculty</fullName>
    <columns>NAME</columns>
    <columns>Account_UUID__c</columns>
    <columns>Signup_Date__c</columns>
    <columns>Accounts_Link__c</columns>
    <columns>Lead__c</columns>
    <columns>Contact__c</columns>
    <columns>Faculty_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Faculty_Status__c</field>
        <operation>equals</operation>
        <value>no_info,incomplete_signup,pending_faculty,rejected_by_sheer_id</value>
    </filters>
    <filters>
        <field>Account_Role__c</field>
        <operation>notEqual</operation>
        <value>Student</value>
    </filters>
    <label>Pending Faculty</label>
</ListView>