unpackaged/main/default/objects/OpenStax_Account__c/listViews/Student_Accounts.listView-meta.xml
<ListView>
    <fullName>Student_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Accounts_Link__c</columns>
    <columns>Account_UUID__c</columns>
    <columns>Lead__c</columns>
    <columns>Contact__c</columns>
    <columns>Signup_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Role__c</field>
        <operation>equals</operation>
        <value>Student</value>
    </filters>
    <label>Student Accounts</label>
</ListView>